// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded blob 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "dataStorageReferences": [],
            "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "size": 1500,
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobAsCalldataGasFee": 10000n,
        "blobAsCalldataGasUsed": 1000n,
        "blobGasBaseFee": 2883584n,
        "blobGasMaxFee": 13107200n,
        "blobGasPrice": 22n,
        "blobGasUsed": 131072n,
        "blobs": [
          {
            "commitment": "0xb10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "dataStorageReferences": [],
            "proof": "b10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
            "size": 1500,
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "decodedFields": null,
        "from": "address2",
        "hash": "txHash016",
        "index": 0,
        "maxFeePerBlobGas": 100n,
        "rollup": null,
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobAsCalldataGasFee": 10000n,
        "blobAsCalldataGasUsed": 1000n,
        "blobGasBaseFee": 8650752n,
        "blobGasMaxFee": 39321600n,
        "blobGasPrice": 22n,
        "blobGasUsed": 393216n,
        "blobs": [
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
          {
            "commitment": "commitment004",
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "proof": "proof004",
            "size": 1300,
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "decodedFields": null,
        "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
        "hash": "txHash015",
        "index": 0,
        "maxFeePerBlobGas": 100n,
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting expanded block results > should return the correct expanded transaction 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobAsCalldataGasFee": 10000n,
        "blobAsCalldataGasUsed": 1000n,
        "blobGasBaseFee": 2883584n,
        "blobGasMaxFee": 13107200n,
        "blobGasPrice": 22n,
        "blobGasUsed": 131072n,
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "category": "other",
        "decodedFields": null,
        "from": "address2",
        "hash": "txHash016",
        "index": 0,
        "maxFeePerBlobGas": 100n,
        "rollup": null,
        "to": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobAsCalldataGasFee": 10000n,
        "blobAsCalldataGasUsed": 1000n,
        "blobGasBaseFee": 8650752n,
        "blobGasMaxFee": 39321600n,
        "blobGasPrice": 22n,
        "blobGasUsed": 393216n,
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "category": "rollup",
        "decodedFields": null,
        "from": "0x6887246668a3b87f54deb3b94ba47a6f63f32985",
        "hash": "txHash015",
        "index": 0,
        "maxFeePerBlobGas": 100n,
        "rollup": "optimism",
        "to": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return results up to and including the specified slot 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": 2023-05-10T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "hash": "txHash004",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the latest results when no sort was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": 2023-08-31T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368/data",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash006",
              },
            ],
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the oldest results when ascending order is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": 2023-05-10T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "hash": "txHash004",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": 2023-08-03T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to a provided rollup 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 250000n,
    "blobGasPrice": 20n,
    "blobGasUsed": 5000000n,
    "excessBlobGas": 10000n,
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": 2023-08-28T10:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash012",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 2023-08-20T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to reorged blocks when 'reorged' type is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 2500000n,
    "excessBlobGas": 55000n,
    "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
    "number": 1008,
    "slot": 110,
    "timestamp": 2023-08-31T15:50:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436/data",
              },
            ],
            "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
          },
        ],
        "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the block range specified  1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": 2023-08-31T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368/data",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash006",
              },
            ],
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 250000n,
    "blobGasPrice": 20n,
    "blobGasUsed": 5000000n,
    "excessBlobGas": 10000n,
    "hash": "blockHash005",
    "number": 1005,
    "slot": 105,
    "timestamp": 2023-08-28T10:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash012",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash013",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 2023-08-20T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash005/data",
              },
            ],
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the date range specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 2023-08-20T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash005/data",
              },
            ],
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": 2023-08-03T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the receiver address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 2023-08-20T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender address specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results corresponding to the sender and receiver addresses specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the block specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash002",
    "number": 1002,
    "slot": 102,
    "timestamp": 2023-05-10T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
              },
            ],
            "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
          },
        ],
        "hash": "txHash004",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results ending at the date specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": 2042780n,
    "blobGasPrice": 22n,
    "blobGasUsed": 786432n,
    "excessBlobGas": 15000n,
    "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
    "number": 1001,
    "slot": 101,
    "timestamp": 2022-10-16T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash001",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash002",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash003",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the block specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the date specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash006",
    "number": 1006,
    "slot": 106,
    "timestamp": 2023-08-31T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368/data",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash006",
              },
            ],
            "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          },
        ],
        "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting filtered block results > should return the results starting from the slot specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [],
            "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
          },
        ],
        "hash": "txHash016",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "0x7000000000000000000000000000000000000000000000000000000000000000",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash004.bin?alt=media",
              },
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash004/data",
              },
            ],
            "versionedHash": "blobHash004",
          },
        ],
        "hash": "txHash015",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 2023-08-20T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash007",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
        ],
        "hash": "txHash008",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash009",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
              },
            ],
            "versionedHash": "blobHash003",
          },
        ],
        "hash": "txHash010",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "postgres",
                "url": "http://localhost:3001/blobs/blobHash005/data",
              },
            ],
            "versionedHash": "blobHash005",
          },
        ],
        "hash": "txHash011",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000n,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000n,
    "excessBlobGas": 15000n,
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": 2023-08-03T12:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
              },
            ],
            "versionedHash": "blobHash002",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash005",
      },
      {
        "blobs": [
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
          {
            "dataStorageReferences": [
              {
                "storage": "google",
                "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
              },
              {
                "storage": "swarm",
                "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
              },
            ],
            "versionedHash": "blobHash001",
          },
        ],
        "hash": "txHash006",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the total number of items when count is provided 1`] = `8`;

exports[`Block router > getByBlockId > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "hash": "txHash004",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a block by hash 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 2500000n,
  "excessBlobGas": 55000n,
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": 2023-08-31T15:50:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436/data",
            },
          ],
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get a reorged block by block number 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 2500000n,
  "excessBlobGas": 55000n,
  "hash": "0x00903f147f44929cdb385b595b2e745566fe50658362b4e3821fa52b5ebe8f06",
  "number": 1008,
  "slot": 110,
  "timestamp": 2023-08-31T15:50:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436/data",
            },
          ],
          "versionedHash": "0x01d5cc28986f58db309e0fae63b60ade81a01667721e190ec142051240b5d436",
        },
      ],
      "hash": "0xd80214f2e7c7271114f372b6a8baaf39bcb364448788f6d8229d2a903edf9272",
    },
  ],
}
`;

exports[`Block router > getByBlockId > should get the canonical block when providing a block number matching a reorged block 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "excessBlobGas": 15000n,
  "hash": "0x8000000000000000000000000000000000000000000000000000000000000000",
  "number": 1008,
  "slot": 108,
  "timestamp": 2023-08-31T16:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [],
          "versionedHash": "0xb100000000000000000000000000000000000000000000000000000000000000",
        },
      ],
      "hash": "txHash016",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded blob 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "hash": "txHash004",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded results when multiple expands are requested 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobAsCalldataGasFee": 10000n,
      "blobAsCalldataGasUsed": 1000n,
      "blobGasBaseFee": 8650752n,
      "blobGasMaxFee": 39321600n,
      "blobGasPrice": 22n,
      "blobGasUsed": 393216n,
      "blobs": [
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b1",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab1",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b2",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab2",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "commitment": "0x0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000b3",
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "proof": "0x000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000ab3",
          "size": 131072,
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "decodedFields": null,
      "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": 100n,
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`Block router > getByBlockId > when getting expanded block results > should return the correct expanded transaction 1`] = `
{
  "blobAsCalldataGasUsed": 255000n,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000n,
  "excessBlobGas": 15000n,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobAsCalldataGasFee": 10000n,
      "blobAsCalldataGasUsed": 1000n,
      "blobGasBaseFee": 8650752n,
      "blobGasMaxFee": 39321600n,
      "blobGasPrice": 22n,
      "blobGasUsed": 393216n,
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b1/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b1",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b2/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b2",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "postgres",
              "url": "http://localhost:3001/blobs/0x01000000000000000000000000000000000000000000000000000000000000b3/data",
            },
          ],
          "versionedHash": "0x01000000000000000000000000000000000000000000000000000000000000b3",
        },
      ],
      "category": "rollup",
      "decodedFields": null,
      "from": "0x5050f69a9786f081509234f1a7f4684b5e5b76c9",
      "hash": "txHash004",
      "index": 0,
      "maxFeePerBlobGas": 100n,
      "rollup": "base",
      "to": "address3",
    },
  ],
}
`;

exports[`Block router > getBySlot > should fail when trying to get a block with a negative slot 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 0,
    \\"type\\": \\"number\\",
    \\"inclusive\\": false,
    \\"exact\\": false,
    \\"message\\": \\"Number must be greater than 0\\",
    \\"path\\": [
      \\"slot\\"
    ]
  }
]"
`;

exports[`Block router > getBySlot > should fail when trying to get a block with a negative slot 2`] = `
[ZodError: [
  {
    "code": "too_small",
    "minimum": 0,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be greater than 0",
    "path": [
      "slot"
    ]
  }
]]
`;

exports[`Block router > getBySlot > should fail when trying to get a reorged block by slot 1`] = `"Block with slot 110 not found"`;

exports[`Block router > getBySlot > should get a block by slot 1`] = `
{
  "blobAsCalldataGasUsed": 2042780n,
  "blobGasPrice": 22n,
  "blobGasUsed": 786432n,
  "excessBlobGas": 15000n,
  "hash": "0x1000000000000000000000000000000000000000000000000000000000000000",
  "number": 1001,
  "slot": 101,
  "timestamp": 2022-10-16T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
            },
          ],
          "versionedHash": "blobHash002",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash003.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash003",
            },
          ],
          "versionedHash": "blobHash003",
        },
      ],
      "hash": "txHash001",
    },
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
      ],
      "hash": "txHash002",
    },
    {
      "blobs": [
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash001.bin?alt=media",
            },
            {
              "storage": "swarm",
              "url": "https://api.gateway.ethswarm.org/bzz/bzz://some-hash-for-blobHash001",
            },
          ],
          "versionedHash": "blobHash001",
        },
        {
          "dataStorageReferences": [
            {
              "storage": "google",
              "url": "http://localhost:4443/storage/v1/b/blobscan-test-bucket/o/1%2Fob%2FHa%2Fsh%2FobHash002.bin?alt=media",
            },
          ],
          "versionedHash": "blobHash002",
        },
      ],
      "hash": "txHash003",
    },
  ],
}
`;
